Neows' Tentacle code added!

--- a/GremsReliquary/src/main/resources/gremsReliquaryResources/localization/eng/GremsReliquary-Power-Strings.json
+++ b/GremsReliquary/src/main/resources/gremsReliquaryResources/localization/eng/GremsReliquary-Power-Strings.json
@@ -1,9 +1,9 @@
 {
-"theDefault:CommonPower": {
+"gremsReliquary:CommonPower": {
         "NAME": "Placeholder Power",
         "DESCRIPTIONS": ["You applied ", " keyword.", " keywords."]
 },
-"theDefault:RarePower": {
+"gremsReliquary:RarePower": {
         "NAME": "Placeholder Power",
         "DESCRIPTIONS": ["At the start of your turn, TOUCH ", " enemy." , " enemies."]
 }
