--- a/GremsReliquary/src/main/resources/gremsReliquaryResources/localization/eng/GremsReliquary-Card-Strings.json
+++ b/GremsReliquary/src/main/resources/gremsReliquaryResources/localization/eng/GremsReliquary-Card-Strings.json
@@ -1,52 +1,52 @@
 {
-  "theDefault:DefaultCommonAttack": {
+  "gremsReliquary:DefaultCommonAttack": {
     "NAME": "Strike",
     "DESCRIPTION": "Deal !D! Damage. NL [#0000ff]This[] [#ff0000]Is[] [#ffff00]How[] [#88888]color[] [#ff00ff]works.[]"
   },
-  "theDefault:DefaultCommonSkill": {
+  "gremsReliquary:DefaultCommonSkill": {
     "NAME": "Defend",
     "DESCRIPTION": "Gain !B! Block."
   },
-  "theDefault:DefaultCommonPower": {
+  "gremsReliquary:DefaultCommonPower": {
     "NAME": "Hold Place",
     "DESCRIPTION": "Gain !M! Keyword.",
     "UPGRADE_DESCRIPTION": "Gain !M! Keywords."
   },
-  "theDefault:DefaultUncommonAttack": {
+  "gremsReliquary:DefaultUncommonAttack": {
     "NAME": "Big slap",
     "DESCRIPTION": "Deal !D! Damage."
   },
-  "theDefault:DefaultUncommonSkill": {
+  "gremsReliquary:DefaultUncommonSkill": {
     "NAME": "A Better Defend",
     "DESCRIPTION": "Gain !B! Plated Armor. Affected by Dexterity."
   },
-  "theDefault:DefaultUncommonPower": {
+  "gremsReliquary:DefaultUncommonPower": {
     "NAME": "Weirdness",
     "DESCRIPTION": "Gain X Keywords.",
     "UPGRADE_DESCRIPTION": "Gain X +1 Keywords."
   },
-  "theDefault:DefaultRareAttack": {
+  "gremsReliquary:DefaultRareAttack": {
     "NAME": "TOUCH",
     "DESCRIPTION": "Deal !D! Damage."
   },
-  "theDefault:DefaultRareSkill": {
+  "gremsReliquary:DefaultRareSkill": {
     "NAME": "For Each Loop x2",
     "DESCRIPTION": "Apply !M! vulnerable to all enemies, 2 times.",
     "UPGRADE_DESCRIPTION": "Apply !M! vulnerable to all enemies, 3 times."
   },
-  "theDefault:DefaultRarePower": {
+  "gremsReliquary:DefaultRarePower": {
     "NAME": "In-Progress Form",
     "DESCRIPTION": "At the start of your turn, play a TOUCH."
   },
-  "theDefault:DefaultAttackWithVariable": {
+  "gremsReliquary:DefaultAttackWithVariable": {
     "NAME": "Special Strike",
-    "DESCRIPTION": "Deal !D! Damage [E] times. NL (Deal !theDefault:ENERGY_DAMAGE! damage total.)"
+    "DESCRIPTION": "Deal !D! Damage [E] times. NL (Deal !gremsReliquary:ENERGY_DAMAGE! damage total.)"
   },
-  "theDefault:DefaultSecondMagicNumberSkill": {
+  "gremsReliquary:DefaultSecondMagicNumberSkill": {
     "NAME": "Cool 2 Number Card",
-    "DESCRIPTION": "Apply !M! vulnerable and !theDefault:SecondMagic! poison to an enemy."
+    "DESCRIPTION": "Apply !M! vulnerable and !gremsReliquary:SecondMagic! poison to an enemy."
   },
-  "theDefault:OrbSkill": {
+  "gremsReliquary:OrbSkill": {
     "NAME": "Get Orb",
     "DESCRIPTION": "Channel 1 Default Orb."
   }
