--- a/GremsReliquary/src/main/resources/gremsReliquaryResources/localization/eng/GremsReliquary-Event-Strings.json
+++ b/GremsReliquary/src/main/resources/gremsReliquaryResources/localization/eng/GremsReliquary-Event-Strings.json
@@ -1,5 +1,5 @@
 {
-  "theDefault:IdentityCrisisEvent": {
+  "gremsReliquary:IdentityCrisisEvent": {
     "NAME": "Identity Crisis",
     "DESCRIPTIONS": [
       "As you move through ~The~ ~City~ you come across a #pPurple #pMirror. NL You look at it, but you see no reflection.",
