--- a/GremsReliquary/src/main/resources/gremsReliquaryResources/localization/eng/GremsReliquary-Relic-Strings.json
+++ b/GremsReliquary/src/main/resources/gremsReliquaryResources/localization/eng/GremsReliquary-Relic-Strings.json
@@ -1,19 +1,20 @@
 {
-  "theDefault:NeowsTentacle": {
+  "gremsReliquary:NeowsTentacle": {
     "NAME": "Neows' Tentacle",
     "FLAVOR": "Where did this...come from?...",
     "DESCRIPTIONS": [
-      "Upon pickup, gain a random #bNeow #bBlessing."
+      "Upon pickup, gain a random #bNeow #bBlessing.",
+      "You have gained: "
     ]
   },
-  "theDefault:PlaceholderRelic2": {
+  "gremsReliquary:PlaceholderRelic2": {
     "NAME": "Placeholder Relic 2",
     "FLAVOR": "You feel stronger.",
     "DESCRIPTIONS": [
       "At the start of each combat, gain #b1 #yStrength."
     ]
   },
-  "theDefault:DefaultClickableRelic": {
+  "gremsReliquary:DefaultClickableRelic": {
     "NAME": "Right-Clicky Relic",
     "FLAVOR": "The more you right-click it, the more orbs you've evoked in your lifetime.",
     "DESCRIPTIONS": [
@@ -21,7 +22,7 @@
       "YOU ARE MINE!"
     ]
   },
-  "theDefault:BottledPlaceholderRelic": {
+  "gremsReliquary:BottledPlaceholderRelic": {
     "NAME": "Bottled Placeholder",
     "FLAVOR": "What is this?",
     "DESCRIPTIONS": [
