--- a/GremsReliquary/src/main/resources/gremsReliquaryResources/localization/eng/GremsReliquary-Relic-Strings.json
+++ b/GremsReliquary/src/main/resources/gremsReliquaryResources/localization/eng/GremsReliquary-Relic-Strings.json
@@ -3,13 +3,13 @@
     "NAME": "Neows' Tentacle",
     "FLAVOR": "Where did this...come from?...",
     "DESCRIPTIONS": [
-      "Upon pickup, gain a random #bNeow #bBlessing.",
-      "You have gained: "
+      "Upon pickup, btain a random #bNeow #bBlessing.",
+      "You have obtained: "
     ]
   },
   "gremsReliquary:PlaceholderRelic2": {
-    "NAME": "Placeholder Relic 2",
-    "FLAVOR": "You feel stronger.",
+    "NAME": "Test Relic",
+    "FLAVOR": "t e s t.",
     "DESCRIPTIONS": [
       "At the start of each combat, gain #b1 #yStrength."
     ]
