trying to make it work

--- a/GremsReliquary/src/main/resources/gremsReliquaryResources/localization/eng/GremsReliquary-Relic-Strings.json
+++ b/GremsReliquary/src/main/resources/gremsReliquaryResources/localization/eng/GremsReliquary-Relic-Strings.json
@@ -12,7 +12,7 @@
     "FLAVOR": "Ca-Ching!",
     "DESCRIPTIONS": [
       "At the start of each turn, gain #b",
-      " #ggold."
+      " #ygold."
     ]
   },
   "gremsReliquary:PlaceholderRelic2": {
