--- a/GremsReliquary/src/main/resources/gremsReliquaryResources/localization/eng/GremsReliquary-Relic-Strings.json
+++ b/GremsReliquary/src/main/resources/gremsReliquaryResources/localization/eng/GremsReliquary-Relic-Strings.json
@@ -15,17 +15,9 @@
       " #ygold."
     ]
   },
-  "gremsReliquary:BrokenMirror": {
-    "NAME": "Broken Mirror",
-    "FLAVOR": "A pretty ornament, albeit not very functional.",
-    "DESCRIPTIONS": [
-      "Whenever you play an attack, deal #b",
-      " damage to a random enemy."
-    ]
-  },
   "gremsReliquary:PlaceholderRelic2": {
     "NAME": "Test Relic",
-    "FLAVOR": "tttt",
+    "FLAVOR": "t e s t.",
     "DESCRIPTIONS": [
       "At the start of each combat, gain #b1 #yStrength."
     ]
@@ -36,6 +28,16 @@
     "DESCRIPTIONS": [
       "[#2aecd7]Usable [#2aecd7]once [#2aecd7]per [#2aecd7]turn.[] NL #yEvoke your rightmost Orb.",
       "YOU ARE MINE!"
+    ]
+  },
+  "gremsReliquary:BottledPlaceholderRelic": {
+    "NAME": "Bottled Placeholder",
+    "FLAVOR": "What is this?",
+    "DESCRIPTIONS": [
+      "Choose a card. Whenever you take play any card, draw the chosen card.",
+      "Whenever you play a card, draw ",
+      ".",
+      "Select a card to bottle for "
     ]
   }
 }
