--- a/GremsReliquary/src/main/resources/gremsReliquaryResources/localization/eng/GremsReliquary-Relic-Strings.json
+++ b/GremsReliquary/src/main/resources/gremsReliquaryResources/localization/eng/GremsReliquary-Relic-Strings.json
@@ -30,6 +30,13 @@
       "At the start of each combat, gain #b1 #yStrength."
     ]
   },
+  "gremsReliquary:UnbalancedScales": {
+    "NAME": "Unbalanced Scales",
+    "FLAVOR": "No matter what or how you put things on this scale, one side will always tip.",
+    "DESCRIPTIONS": [
+      "At the start of each combat, gain #g5 #yStrength and lose #r5 #yDexterity. NL [#2aecd7]Usable [#2aecd7]once [#2aecd7]per [#2aecd7]combat:[] NL Gain lose #b10 #yStrength and gain #g10 Dexterity."
+    ]
+  },
   "gremsReliquary:DefaultClickableRelic": {
     "NAME": "Right-Clicky Relic",
     "FLAVOR": "The more you right-click it, the more orbs you've evoked in your lifetime.",
